--- a/client/src/css/stripeform.css
+++ b/client/src/css/stripeform.css
@@ -2,10 +2,10 @@
   margin: 0 15px 20px;
   padding: 0;
   border-style: none;
-  background-color: #7795f8;
+  background-color: #5e90a4;
   will-change: opacity, transform;
   box-shadow: 0 6px 9px rgba(50, 50, 93, 0.06), 0 2px 5px rgba(0, 0, 0, 0.08),
-    inset 0 1px 0 #829fff;
+    inset 0 1px 0 #5e90a4;
   border-radius: 4px;
 }
 
