--- a/client/src/css/stripeform.css
+++ b/client/src/css/stripeform.css
@@ -27,7 +27,7 @@
   padding: 11px 15px 11px 0;
 }
 
-button {
+/* button {
   display: block;
   font-size: 16px;
   width: calc(100% - 30px);
@@ -43,22 +43,22 @@ button {
   transition: all 100ms ease-in-out;
   will-change: transform, background-color, box-shadow;
   border: none;
-}
+} */
 
-button:active {
+/* button:active {
   background-color: #d782d9;
   box-shadow: 0 6px 9px rgba(50, 50, 93, 0.06), 0 2px 5px rgba(0, 0, 0, 0.08),
     inset 0 1px 0 #e298d8;
   transform: scale(0.99);
-}
+} */
 
-.App {
+/* .App {
   margin-left: 25%;
   margin-top: 5%;
   margin-right: 25%;
-}
+} */
 
-h1,
+/* h1,
 h3 {
   text-align: center;
-}
+} */
