--- a/client/src/css/stripeform.css
+++ b/client/src/css/stripeform.css
@@ -1,64 +1,40 @@
-.FormGroup {
-  margin: 0 15px 20px;
-  padding: 0;
-  border-style: none;
-  background-color: #5e90a4;
-  will-change: opacity, transform;
-  box-shadow: 0 6px 9px rgba(50, 50, 93, 0.06), 0 2px 5px rgba(0, 0, 0, 0.08),
-    inset 0 1px 0 #5e90a4;
+/* stripe docs */
+
+.stripe-btn {
+  background: #5469d4;
+  font-family: Arial, sans-serif;
+  color: #ffffff;
   border-radius: 4px;
-}
-
-.FormRow {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-align: center;
-  align-items: center;
-  margin-left: 15px;
-  border-top: 1px solid #819efc;
-}
-
-.StripeElement--webkit-autofill {
-  background: transparent !important;
-}
-
-.StripeElement {
-  width: 100%;
-  padding: 11px 15px 11px 0;
-}
-
-/* button {
-  display: block;
+  border: 0;
+  padding: 12px 16px;
+  margin-top: 15px;
   font-size: 16px;
-  width: calc(100% - 30px);
-  height: 40px;
-  margin: 40px 15px 0;
-  background-color: #f6a4eb;
-  box-shadow: 0 6px 9px rgba(50, 50, 93, 0.06), 0 2px 5px rgba(0, 0, 0, 0.08),
-    inset 0 1px 0 #ffb9f6;
-  border-radius: 4px;
-  color: #fff;
   font-weight: 600;
   cursor: pointer;
-  transition: all 100ms ease-in-out;
-  will-change: transform, background-color, box-shadow;
-  border: none;
-} */
+  display: block;
+  transition: all 0.2s ease;
+  box-shadow: 0px 4px 5.5px 0px rgba(0, 0, 0, 0.07);
+  width: 100%;
+}
 
-/* button:active {
-  background-color: #d782d9;
-  box-shadow: 0 6px 9px rgba(50, 50, 93, 0.06), 0 2px 5px rgba(0, 0, 0, 0.08),
-    inset 0 1px 0 #e298d8;
-  transform: scale(0.99);
-} */
+.stripe-btn :hover {
+  background-color: lightblue;
+}
 
-/* .App {
-  margin-left: 25%;
+.stripe-form {
+  width: 30vw;
+  min-width: 500px;
+  align-self: center;
+  box-shadow: 0px 0px 0px 0.5px rgba(50, 50, 93, 0.1),
+    0px 2px 5px 0px rgba(50, 50, 93, 0.1), 0px 1px 1.5px 0px rgba(0, 0, 0, 0.07);
+  border-radius: 7px;
+  padding: 40px;
+}
+
+.stripe-payment {
   margin-top: 5%;
-  margin-right: 25%;
-} */
-
-/* h1,
-h3 {
-  text-align: center;
-} */
+  margin-bottom: 0;
+  margin-left: 25%;
+  margin-right: 100%;
+  background-color: #f2f2f2;
+}
