--- a/client/src/css/tourmain.css
+++ b/client/src/css/tourmain.css
@@ -1,7 +1,7 @@
 .tour-form {
-  margin-top: 5%;
+  margin-top: 20%;
   margin-bottom: 0;
-  margin-left: 1%;
+  margin-left: 5%;
   margin-right: 30%;
   border-radius: 5px;
   background-color: #f2f2f2;
@@ -10,12 +10,9 @@
   font-size: inherit;
 }
 
-body {
-  /* background: rgba(0, 128, 0, 0.3); */
-}
-
 .tour-list {
-  /* display: grid; */
+  margin-top: 7%;
+  margin-right: 25%;
 }
 
 .tour-list-li {
@@ -23,11 +20,32 @@ body {
   margin-top: 1%;
   font-size: 1.5em;
   list-style-type: none;
+  border: 1px solid #000;
+  padding: 20px;
+  background: rgb(186, 229, 186);
+  height: 60px;
+  /* position: relative; */
+}
+.tour-list-li:nth-child(odd) {
+  background: rgb(239, 195, 195);
+}
+
+.tour-form-style {
+  width: 100%;
+  height: 70px;
 }
 
 .edit-icon {
-  /* float: right; */
+  float: right;
   margin-right: 0.5%;
+}
+
+.edit-input-li {
+  width: 40%;
+}
+
+.main-page {
+  display: flex;
 }
 
 .edit-input {
@@ -36,6 +54,10 @@ body {
   background-color: #ff8c00;
   border-radius: 5px;
   border: none;
+}
+
+.tour-form-submit {
+  margin-top: 10%;
 }
 
 /* .node__root none {
