--- a/client/src/css/login.css
+++ b/client/src/css/login.css
@@ -1,3 +1,12 @@
+body {
+  /* background-image: url(''); */
+  /* background-size: cover; */
+  /* height: 500px; */
+  /* background-position: center;
+  background-repeat: no-repeat; */
+  background-color: #c5e6f2;
+}
+
 .login-label-btn {
   width: 100%;
   background-color: #4caf50;
