--- a/client/src/css/reacttable.css
+++ b/client/src/css/reacttable.css
@@ -1,28 +1,38 @@
 table {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
-  width: 100%;
+  width: 80%;
+  margin-left: 10%;
+  text-align: center;
 }
 
 table td,
 table th {
-  border: 1px solid #ddd;
-  padding: 8px;
+  border: 1px solid rgb(19, 15, 15);
+  padding: 10px;
 }
 
 table tr:nth-child(even) {
-  background-color: #f2f2f2;
+  background-color: #b7ecc0;
 }
 
 table tr:hover {
-  background-color: #ddd;
+  background-color: rgb(218, 176, 176);
 }
 
 table th,
 tfoot td {
   padding-top: 12px;
   padding-bottom: 12px;
-  text-align: center;
-  background-color: #04aa6d;
+  background-color: #55ae8f;
   color: white;
+}
+
+.search-table {
+  margin-left: 10%;
+}
+
+.pagination-table {
+  margin-left: 40%;
+  margin-top: 2%;
 }
