--- a/client/src/css/player.css
+++ b/client/src/css/player.css
@@ -36,8 +36,9 @@
 }
 
 .tree-print {
-  margin-left: 90%;
+  margin-left: 80%;
   margin-top: 1%;
+  display: flex;
 }
 
 .tree-dropdown {
@@ -46,7 +47,7 @@
 
 .tree-back,
 .tree-home {
-  margin-left: 2%;
+  margin-right: 2%;
 }
 
 .player-list-btn {
@@ -72,7 +73,7 @@
 .playercards-list {
   /* border: 1px solid; */
   border: dashed rgb(76, 56, 56);
-  background: rgb(190, 190, 245);
+  background: rgb(160, 217, 255);
   list-style-type: none;
   margin-top: 10px;
   margin-right: 30px;
@@ -80,7 +81,7 @@
 }
 
 .playercards-list:nth-child(odd) {
-  background: rgb(132, 196, 236);
+  background: rgb(219, 234, 244);
 }
 
 .playercards-ul {
