--- a/client/src/css/reacttable.css
+++ b/client/src/css/reacttable.css
@@ -13,7 +13,7 @@ table th {
 }
 
 table tr:nth-child(even) {
-  background-color: #b7ecc0;
+  background-color: rgb(187, 225, 250);
 }
 
 table tr:hover {
@@ -22,14 +22,16 @@ table tr:hover {
 
 table th,
 tfoot td {
-  padding-top: 12px;
+  padding-top: 10px;
   padding-bottom: 12px;
-  background-color: #55ae8f;
-  color: white;
+  background-color: rgb(243, 246, 249);
+  color: rgb(4, 4, 4);
 }
 
 .search-table {
   margin-left: 10%;
+  margin-top: 2%;
+  margin-bottom: 1%;
 }
 
 .pagination-table {
