--- a/client/src/css/login.css
+++ b/client/src/css/login.css
@@ -5,7 +5,7 @@ body {
 
 .login-label-btn {
   width: 100%;
-  background-color: #4caf50;
+  background-color: rgb(247, 195, 100);
   color: white;
   padding: 14px 20px;
   margin: 25px 0;
@@ -15,7 +15,7 @@ body {
 }
 
 .login-label-btn :hover {
-  background-color: #3f51b5;
+  background-color: #5064da;
 }
 
 .register-btn {
