--- a/client/src/css/stripeform.css
+++ b/client/src/css/stripeform.css
@@ -25,8 +25,8 @@
   width: 30vw;
   min-width: 500px;
   align-self: center;
-  box-shadow: 0px 0px 0px 0.5px rgba(50, 50, 93, 0.1),
-    0px 2px 5px 0px rgba(50, 50, 93, 0.1), 0px 1px 1.5px 0px rgba(0, 0, 0, 0.07);
+  box-shadow: 0px 0px 0px 0.5px rgba(50, 50, 93, 0.5),
+    0px 2px 5px 0px rgba(50, 50, 93, 0.7), 0px 1px 1.5px 0px rgba(0, 0, 0, 0.5);
   border-radius: 7px;
   padding: 40px;
 }
@@ -34,7 +34,8 @@
 .stripe-payment {
   margin-top: 5%;
   margin-bottom: 0;
-  margin-left: 25%;
-  margin-right: 100%;
-  background-color: #f2f2f2;
+  /* background-color: #f2f2f2; */
+  margin-left: 30%;
+  margin-right: 30%;
+  width: 40%;
 }
