--- a/client/src/css/player.css
+++ b/client/src/css/player.css
@@ -88,3 +88,10 @@
   width: 300px;
   padding-right: 20%;
 }
+
+.doughbut-chart {
+  margin-top: 1%;
+  margin-right: 20%;
+  margin-left: 20%;
+  width: 60%;
+}
