--- a/client/src/css/tourmain.css
+++ b/client/src/css/tourmain.css
@@ -1,8 +1,8 @@
 .tour-form {
   margin-top: 20%;
   margin-bottom: 0;
-  margin-left: 5%;
-  margin-right: 30%;
+  margin-left: 10%;
+  margin-right: 15%;
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 20px;
@@ -64,6 +64,12 @@
 
 .tour-form-submit {
   margin-top: 10%;
+}
+
+.tour-list-pagination {
+  margin-top: 15%;
+  margin-right: 15%;
+  text-align: center;
 }
 
 .elemental-node {
